Correct uWSGI parameters for Gdash & add authnz_ldap for Graphite
Change-Id: I476e7b6f18bedd9875b9dff6670da8bc1aba6718

--- a/templates/apache/sites/gdash.wikimedia.org.erb
+++ b/templates/apache/sites/gdash.wikimedia.org.erb
@@ -3,6 +3,10 @@
 <VirtualHost *:80>
     ServerName gdash.wikimedia.org
 
-    uWSGIsocket /var/run/gdash/gdash.sock
-    SetHandler uwsgi-handler
+    <Location />
+        SetHandler uwsgi-handler
+        uWSGIForceScriptName /
+        uWSGImodifier1 7
+        uWSGIsocket /var/run/gdash/gdash.sock
+    </Location>
 </VirtualHost>
