Add runner for GWToolset jobs
Add a job runner to process the GWToolset jobs. These are file download
processing jobs that will fetch media files from remote GLAM servers and
store them in commons.

Bug: 56181
Change-Id: I722c1b7bbf58da03caae82614ad07408834984c9

--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -219,6 +219,9 @@ else
 	(runJobsLoopService "ParsoidCacheUpdateJobOnDependencyChange" "n"  <%= procs_per_iobound_type %> ) &
 	# High priority for updates to edited pages themselves
 	(runJobsLoopService "ParsoidCacheUpdateJobOnEdit" "n"  $((<%= procs_per_iobound_type %> * 2)) ) &
+
+	# GWToolset
+	(runJobsLoopService "gwtoolsetUploadMetadataJob gwtoolsetUploadMediafileJob gwtoolsetGWTFileBackendCleanupJob" "n"  <%= procs_per_iobound_type %> ) &
 fi
 
 wait
