Derive the corresponding original URL and store it with the thumb
Change-Id: I5c93e62aea4c1331e257bd0a9844ac8ed8f8a1ad

--- a/templates/varnish/upload-backend.inc.vcl.erb
+++ b/templates/varnish/upload-backend.inc.vcl.erb
@@ -126,6 +126,11 @@ sub vcl_fetch {
 		set beresp.http.X-Content-Range = beresp.http.Content-Range;
 	}
 
+	# Derive the corresponding original URL and store it with the object
+	if (!beresp.http.X-MediaWiki-Original && req.url ~ "^/+[^/]+/[^/]+/thumb/[^/]+/[^/]+/[^/]+/[0-9]+px-") {
+		set beresp.http.X-MediaWiki-Original = regsub(req.url, "^(/+[^/]+/[^/]+/)thumb/([^/]+/[^/]+/[^/]+).*$", "\1\2");
+	}
+
 	return (deliver);
 }
 
