Update elasticsearch settings
1.  Turn off some logging that I _think_ is causing some cluster actions
to really slow down.
2.  Make permanent some settings that we've configured via the api to
speed up recovery after a node crashes.

Change-Id: Id40b0c9bececa8b89ebb9228418957a53ada44c9

--- a/modules/elasticsearch/templates/elasticsearch.yml.erb
+++ b/modules/elasticsearch/templates/elasticsearch.yml.erb
@@ -273,22 +273,18 @@ bootstrap.mlockall: true
 # Set the number of concurrent recoveries happening on a node:
 #
 # 1. During the initial recovery
-#
-# cluster.routing.allocation.node_initial_primaries_recoveries: 4
-#
+cluster.routing.allocation.node_initial_primaries_recoveries: 4
+
 # 2. During adding/removing nodes, rebalancing, etc
-#
-# cluster.routing.allocation.node_concurrent_recoveries: 2
+cluster.routing.allocation.node_concurrent_recoveries: 15
 
 # Set to throttle throughput when recovering (eg. 100mb, by default 20mb):
-#
-# indices.recovery.max_bytes_per_sec: 20mb
+indices.recovery.max_bytes_per_sec: 100mb
 
 
 # Set to limit the number of open concurrent streams when
 # recovering a shard from a peer:
-#
-# indices.recovery.concurrent_streams: 5
+indices.recovery.concurrent_streams: 5
 
 
 ################################## Discovery ##################################
