mwprof module: update package deps & Upstart job def
* Remove libdb-dev from package dependencies; replace with libglib2.0-dev
  and glib-networking.
* Update Upstart job def to invoke mwprof rather than collector. This depends
  on Iad08d7524, but I'm going to cheat and start running it in production even
  though it's still under review.

Change-Id: Id5192d229d1f2c43ace87a63c81d9e5279760aef

--- a/modules/mwprof/templates/upstart/collector.conf.erb
+++ b/modules/mwprof/templates/upstart/collector.conf.erb
@@ -6,13 +6,9 @@ description "profiling data collector"
 
 stop on runlevel [!2345] or mwprof.stop
 
-expect fork
-
 setuid mwprof
 setgid mwprof
 
-env COLLECTOR_PORT=<%= @collector_port %>
-chdir /run/mwprof
-exec /srv/deployment/mwprof/mwprof/collector
+exec /srv/deployment/mwprof/mwprof/mwprof --listen-port=<%= @collector_port %>
 
 respawn
