--- a/templates/openstack/common/controller/glance-user.sql.erb
+++ b/templates/openstack/common/controller/glance-user.sql.erb
@@ -1,2 +1,5 @@
 GRANT USAGE ON *.* to '<%= glance_db_user %>'@'%' IDENTIFIED BY '<%= glance_db_pass %>';
+GRANT USAGE ON *.* to '<%= glance_db_user %>'@'127.0.0.1' IDENTIFIED BY '<%= glance_db_pass %>';
+GRANT USAGE ON *.* to '<%= glance_db_user %>'@'localhost' IDENTIFIED BY '<%= glance_db_pass %>';
 GRANT ALL PRIVILEGES ON <%= glance_db_name %>.* to '<%= glance_db_user %>'@'%';
+FLUSH PRIVILEGES;
