--- a/templates/openstack/common/controller/keystone-user.sql.erb
+++ b/templates/openstack/common/controller/keystone-user.sql.erb
@@ -1,2 +1,5 @@
 GRANT USAGE ON *.* to '<%= keystone_db_user %>'@'%' IDENTIFIED BY '<%= keystone_db_pass %>';
+GRANT USAGE ON *.* to '<%= keystone_db_user %>'@'127.0.0.1' IDENTIFIED BY '<%= keystone_db_pass %>';
+GRANT USAGE ON *.* to '<%= keystone_db_user %>'@'localhost' IDENTIFIED BY '<%= keystone_db_pass %>';
 GRANT ALL PRIVILEGES ON <%= keystone_db_name %>.* to '<%= keystone_db_user %>'@'%';
+FLUSH PRIVILEGES;
