--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -57,13 +57,13 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "623-03") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(fr|ar|sg|en|es|zh|ha|ln|eo)\.m|^m)\.") {
+			if (req.http.host ~ "(^((fr|ar|sg|en|es|zh|ha|ln|eo)\.)?m\.") {
 				set req.http.X-CS = "623-03";
 			}
 		}
 	} else if (req.http.X-CS2 == "413-02") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(en|ta|si)\.zero|^zero)\.") {
+			if (req.http.host ~ "(^((en|ta|si)\.)?zero\.") {
 				set req.http.X-CS = "413-02";
 			}
 		}
@@ -81,13 +81,13 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "470-03") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(en|bn)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((en|bn)\.)?(zero|m)\.") {
 				set req.http.X-CS = "470-03";
 			}
 		}
 	} else if (req.http.X-CS2 == "416-03") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(en|ar)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((en|ar)\.)?(zero|m)\.") {
 				set req.http.X-CS = "416-03";
 			}
 		}
@@ -101,7 +101,7 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "624-02") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(fr|en|es|de|zh|ar|ha|ln|yo|eo)\.m|^m)\.") {
+			if (req.http.host ~ "(^((fr|en|es|de|zh|ar|ha|ln|yo|eo)\.)?m\.") {
 				set req.http.X-CS = "624-02";
 			}
 		}
@@ -119,7 +119,7 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "604-00") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(fr|ar|en|es|de|it|nl|pt|ru|zh)\.m|^m)\.") {
+			if (req.http.host ~ "(^((fr|ar|en|es|de|it|nl|pt|ru|zh)\.)?m\.") {
 				set req.http.X-CS = "604-00";
 			}
 		}
@@ -129,19 +129,19 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "605-01") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(ar|en|fr|es|de|it|ru|ja|zh)\.m|^m)\.") {
+			if (req.http.host ~ "(^((ar|en|fr|es|de|it|ru|ja|zh)\.)?m\.") {
 				set req.http.X-CS = "605-01";
 			}
 		}
 	} else if (req.http.X-CS2 == "641-14") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(ko|fr|de|en|zh|sw|rw|ar|hi|es)\.m|^m)\.") {
+			if (req.http.host ~ "(^((ko|fr|de|en|zh|sw|rw|ar|hi|es)\.)?m\.") {
 				set req.http.X-CS = "641-14";
 			}
 		}
 	} else if (req.http.X-CS2 == "420-01") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(ar|bn|en|tl|ur)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((ar|bn|en|tl|ur)\.)?(zero|m)\.") {
 				set req.http.X-CS = "420-01";
 			}
 		}
@@ -151,37 +151,37 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "250-99") {
 		if (!req.http.X-Forwarded-By || req.http.X-Forwarded-By == "Opera") {
-			if (req.http.host ~ "(^(en|ru)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((en|ru)\.)?(zero|m)\.") {
 				set req.http.X-CS = "250-99";
 			}
 		}
 	} else if (req.http.X-CS2 == "410-01") {
 		if (!req.http.X-Forwarded-By || req.http.X-Forwarded-By == "Opera") {
-			if (req.http.host ~ "(^(en|ur)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((en|ur)\.)?(zero|m)\.") {
 				set req.http.X-CS = "410-01";
 			}
 		}
 	} else if (req.http.X-CS2 == "510-11") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(id|en|zh|ar|hi|ms|jv|su)\.zero|^zero)\.") {
+			if (req.http.host ~ "(^((id|en|zh|ar|hi|ms|jv|su)\.)?zero\.") {
 				set req.http.X-CS = "510-11";
 			}
 		}
 	} else if (req.http.X-CS2 == "646-02") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(fr|en|mg)\.m|^m)\.") {
+			if (req.http.host ~ "(^((fr|en|mg)\.)?m\.") {
 				set req.http.X-CS = "646-02";
 			}
 		}
 	} else if (req.http.X-CS2 == "436-01") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(en|tg|ru)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((en|tg|ru)\.)?(zero|m)\.") {
 				set req.http.X-CS = "436-01";
 			}
 		}
 	} else if (req.http.X-CS2 == "401-01") {
 		if (!req.http.X-Forwarded-By) {
-			if (req.http.host ~ "(^(ru|kk|en)\.(zero|m)|^(zero|m))\.") {
+			if (req.http.host ~ "(^((ru|kk|en)\.)?(zero|m)\.") {
 				set req.http.X-CS = "401-01";
 			}
 		}
