--- a/modules/wikimania_scholarships/templates/env.erb
+++ b/modules/wikimania_scholarships/templates/env.erb
@@ -18,6 +18,9 @@ LOG_FILE=<%= @log_file %>
 ; SMTP relay for outgoing email messages
 SMTP_HOST=<%= @smtp_host %>
 
+; Directory for apache to write twig template cache files
+CACHE_DIR=<% @cache_dir %>
+
 ; Date/time that applications will first be accepted
 ; Value should be compatible with PHP's strtotime() function
 APPLICATION_OPEN=<%= @open_date %>
