fix up torrus squid template for case when there are no squids
Change-Id: Idd9ecc34814afab85758260e87330c51b45c6135

--- a/templates/torrus/squid.xml.erb
+++ b/templates/torrus/squid.xml.erb
@@ -17,11 +17,13 @@ def squid_nodes(role, site)
 		result << "</subtree>"
 	end
 
-	active_nodes.each do |node|
-		result << "<subtree name=\"#{node}\">"
-		result << "\t<param name=\"hostname\" value=\"#{node}\"/>"
-		result << "\t<apply-template name=\"wikimedia-squid-server\"/>"
-		result << "</subtree>"
+	if (! active_nodes.nil?)
+		active_nodes.each do |node|
+			result << "<subtree name=\"#{node}\">"
+			result << "\t<param name=\"hostname\" value=\"#{node}\"/>"
+			result << "\t<apply-template name=\"wikimedia-squid-server\"/>"
+			result << "</subtree>"
+		end
 	end
 	
 	return result
