more torrus conf generation fixup for case of no active squids
Change-Id: I4ca04a6b0719492a099fe2b0883b5d8c470d3d13

--- a/templates/torrus/cdn-aggregates.xml.erb
+++ b/templates/torrus/cdn-aggregates.xml.erb
@@ -8,7 +8,11 @@ end
 
 def node_list_squid(role, site)
 	realm = scope.lookupvar('::realm')
-	return scope.lookupvar("role::cache::configuration::decommissioned_nodes")[role][site] + scope.lookupvar("role::cache::configuration::active_nodes")[realm][role][site+'-squid']
+	active = scope.lookupvar("role::cache::configuration::active_nodes")[realm][role][site+'-squid']
+	if (active.nil?)
+		active = []
+	end
+	return scope.lookupvar("role::cache::configuration::decommissioned_nodes")[role][site] + active
 end
 
 def squid_rpn(role, site, list=nil)
