--- a/modules/wikimania_scholarships/templates/env.erb
+++ b/modules/wikimania_scholarships/templates/env.erb
@@ -19,7 +19,7 @@ LOG_FILE=<%= @log_file %>
 SMTP_HOST=<%= @smtp_host %>
 
 ; Directory for apache to write twig template cache files
-CACHE_DIR=<% @cache_dir %>
+CACHE_DIR=<%= @cache_dir %>
 
 ; Date/time that applications will first be accepted
 ; Value should be compatible with PHP's strtotime() function
