Fix quoting error in generic_vhost.erb
This change fixes a regression introduced by change
I9a502bfa2ebced111fd3f990cafef188f39995f8 and adjusts the indentation.

Apparently there is currently only one use of this template in
manifests/misc/statistics.pp, and that does not utilize "ssl =>
'true'", so this change should not make any SSL webservers
unexpectedly appear from nowhere.

Change-Id: I550489752afa36e46e966ccfdc7ece9fded838db

--- a/templates/apache/generic_vhost.erb
+++ b/templates/apache/generic_vhost.erb
@@ -34,12 +34,12 @@
 </VirtualHost>
 <% end -%>
 
-<% if ["true", "only", "redirected"].include?("ssl") -%>
+<% if ["true", "only", "redirected"].include?(ssl) -%>
 <VirtualHost *:443>
 	ServerName <%= title %>
-	<% if aliases.length > 0 -%>
+<% if aliases.length > 0 -%>
 	ServerAlias <%= aliases.join(" ") %>
-	<% end -%>
+<% end -%>
 	ServerAdmin root@wikimedia.org
 
 	SSLEngine on
