Varnish: switch to W3C standard headers for ESI
Instead of our own X-FORCE-ESI & X-Enable-ESI headers, use the
standardized Surrogate-Control/Surrogate-Capability headers, as defined
in http://www.w3.org/TR/edge-arch

The implementation is a bit naive now, not supporting section 2.3
(targeting) of the specification, which could potentially be useful in
the future for letting origin control ESI in backends as well. The
implementation is also not strictly parsing Surrogate-Control properly
nor barfing on syntax errors, but it should do it for now.

Also see the discussion on Bug #48835 about implementing the
Surrogate/1.0 protocol (part of the same specification and using the
same headers) between MediaWiki core & Varnish.

Change-Id: Ib2a2b31fc3a62768588f25dfcf53b5954a80d1ba

--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -82,12 +82,12 @@ sub vcl_recv {
 
 <% if cluster_options.fetch( "enable_esi", false ) -%>
 	if (req.http.X-CS == "-TEST") {
-		set req.http.X-FORCE-ESI = "1";
+		set req.http.Surrogate-Capability = "frontend=ESI/1.0";
 	} else {
-		unset req.http.X-FORCE-ESI;
+		unset req.http.Surrogate-Capability;
 	}
 <% else -%>
-	unset req.http.X-FORCE-ESI;
+	unset req.http.Surrogate-Capability;
 <% end -%>
 
 	/* Default (now modified) Varnish vcl_recv function */
@@ -104,7 +104,8 @@ sub vcl_recv {
 
 sub vcl_fetch {
 <% if cluster_options.fetch( "enable_esi", false ) -%>
-	if (beresp.http.Enable-ESI == "1") {
+	if (beresp.http.Surrogate-Control ~ "ESI/1.0") {
+		unset beresp.http.Surrogate-Control;
 		set beresp.do_esi = true;
 	}
 <% end -%>
