--- a/templates/powerdns/recursor.conf.erb
+++ b/templates/powerdns/recursor.conf.erb
@@ -30,7 +30,7 @@
 #
 # allow-from=127.0.0.0/8, 10.0.0.0/8, 192.168.0.0/16, 172.16.0.0/12, ::1/128, fe80::/10
 
-allow-from=127.0.0.0/8, ::1/128, <%= (allow_from + flatten_ips(listen_addresses)).join(", ") %>
+allow-from=127.0.0.0/8, ::1/128, <%= (@allow_from + flatten_ips(@listen_addresses)).join(", ") %>
 
 #################################
 # auth-can-lower-ttl	If we follow RFC 2181 to the letter, an authoritative server can lower the TTL of NS records
