--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -221,7 +221,9 @@ else
 	(runJobsLoopService "ParsoidCacheUpdateJobOnEdit" "n"  $((<%= procs_per_iobound_type %> * 2)) ) &
 
 	# GWToolset
-	(runJobsLoopService "gwtoolsetUploadMetadataJob gwtoolsetUploadMediafileJob gwtoolsetGWTFileBackendCleanupJob" "n"  <%= procs_per_iobound_type %> ) &
+	(runJobsLoopService "gwtoolsetUploadMetadataJob" "n"  <%= procs_per_iobound_type %> ) &
+	(runJobsLoopService "gwtoolsetUploadMediafileJob" "n"  <%= procs_per_iobound_type %> ) &
+	(runJobsLoopService "gwtoolsetGWTFileBackendCleanupJob" "n"  <%= procs_per_iobound_type %> ) &
 fi
 
 wait
