--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -12,6 +12,7 @@ sub vcl_recv {
 		set req.backend = tungsten;
 	} elsif (req.http.Host == "scholarships.wikimedia.org") {
 		set req.backend = zirconium;
+                return (pass);
 	} else {
 		error 404 "Domain not served here";
 	}
