--- a/modules/ishmael/templates/apache/ishmael.wikimedia.org.erb
+++ b/modules/ishmael/templates/apache/ishmael.wikimedia.org.erb
@@ -10,9 +10,9 @@ NameVirtualHost *:443
 	SSLProtocol -ALL +SSLv3 +TLSv1
 	SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
 	SSLHonorCipherOrder on
-	SSLCertificateFile /etc/ssl/private/<%= @ssl_cert %>.pem
-	SSLCertificateKeyFile /etc/ssl/private/<%= @ssl_cert %>.key
-	SSLCACertificateFile /etc/ssl/certs/<%= @ssl_ca %>.pem
+	SSLCertificateFile /etc/ssl/private/star.wikimedia.org.pem
+	SSLCertificateKeyFile /etc/ssl/private/star.wikimedia.org.key
+	SSLCACertificateFile /etc/ssl/certs/RapidSSL_CA.pem
 	DocumentRoot <%= @docroot %>
 
 	<Directory "<%= @docroot %>">
