Debug https://gerrit.wikimedia.org/r/96403
- one more variable name typo in .erb

Change-Id: Ic4b887dc1d188b16efda9baf4c1edda9419f8ece

--- a/modules/ishmael/templates/apache/ishmael.wikimedia.org.erb
+++ b/modules/ishmael/templates/apache/ishmael.wikimedia.org.erb
@@ -28,7 +28,7 @@ NameVirtualHost *:443
 		AuthBasicProvider ldap
 		AuthLDAPBindDN <%= @ldap_binddn %>
 		AuthLDAPBindPassword <%= @proxypass %>
-		AuthLDAPURL "<%= @ldap_binddn %>"
+		AuthLDAPURL "<%= @ldap_authurl %>"
 		Require ldap-group <%= @ldap_group %>
 	</Directory>
 </VirtualHost>
