--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -179,6 +179,10 @@ sub tag_carrier {
 				set req.http.X-CS = "436-01";
 			}
 		}
+	} else if (req.http.X-CS2 == "436-04") {
+		if (!req.http.X-Forwarded-By || req.http.X-Forwarded-By == "Opera") {
+			set req.http.X-CS = req.http.X-CS2;
+		}
 	} else if (req.http.X-CS2 == "401-01") {
 		if (!req.http.X-Forwarded-By) {
 			if (req.http.host ~ "^((ru|kk|en)\.)?(zero|m)\.") {
