--- a/templates/varnish/misc.inc.vcl.erb
+++ b/templates/varnish/misc.inc.vcl.erb
@@ -10,6 +10,8 @@ sub vcl_recv {
 		set req.backend = ytterbium;
 	} elsif (req.http.Host == "gdash.wikimedia.org" || req.http.Host == "graphite.wikimedia.org") {
 		set req.backend = tungsten;
+	} elsif (req.http.Host == "kibana.wikimedia.org"){
+		set req.backend = kibana;
 	} elsif (req.http.Host == "scholarships.wikimedia.org") {
 		set req.backend = zirconium;
 		return (pass);
@@ -19,6 +21,11 @@ sub vcl_recv {
 
 	if (req.request != "GET" && req.request != "HEAD") {
 		/* We only deal with GET and HEAD */
+		return (pass);
+	}
+
+	if (req.http.Authorization) {
+		/* Don't cache authorized content */
 		return (pass);
 	}
 
