--- a/modules/ircecho/templates/default.erb
+++ b/modules/ircecho/templates/default.erb
@@ -49,7 +49,7 @@ end
 #
 # This is a POSIX shell fragment
 #
-INFILE="<%= infile(ircecho_logs) %>"
-NICK="<%= ircecho_nick %>"
-CHANS="<%= chans(ircecho_logs) %>"
-SERVER="<%= ircecho_server %>"
+INFILE="<%= infile(@ircecho_logs) %>"
+NICK="<%= @ircecho_nick %>"
+CHANS="<%= chans(@ircecho_logs) %>"
+SERVER="<%= @ircecho_server %>"
