--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -210,6 +210,7 @@ else
 	hpriotypes="$hpriotypes TranslateRenderJob TranslateMoveJob TranslateDeleteJob" # translate
 	hpriotypes="$hpriotypes uploadFromUrl" # upload
 	hpriotypes="$hpriotypes MassMessageJob MassMessageSubmitJob" # MassMessage
+	hpriotypes="$hpriotypes cirrusSearchLinksUpdatePrioritized" # CirrusSearch priority jobs
 	(runJobsLoopService "$hpriotypes" "y" <%= dprioprocs %>) &
 
 	# Start loops for highly I/O bound jobs that work on special services (e.g. not the DBs)
