beta: parsoid switch to jenkins deployed parsoid
Parsoid will be deployed by a new job under /srv/deployment/parsoid,
this patch make it possible to adjust the NODE_PATH in the upstart
configuration so it points to the 'deploy' checkout.

Change-Id: I8e0bed78fdeac765dec25a0f8b865dd6ade38e36

--- a/templates/misc/parsoid.default.erb
+++ b/templates/misc/parsoid.default.erb
@@ -4,4 +4,12 @@
 #####################################################################
 
 # File where the parsoid daemon will write stdin and stdout to
-PARSOID_LOG_FILE=<%= parsoid_log_file %>
+PARSOID_LOG_FILE=<%= @parsoid_log_file %>
+
+# Checkout of mediawiki/services/parsoid/deploy
+<% if @parsoid_node_path then %>
+NODE_PATH=<%= @parsoid_node_path %>
+<% else %>
+# Override in puppet using parsoid_node_path
+#NODE_PATH=
+<% end %>
