--- a/templates/misc/parsoid.default.erb
+++ b/templates/misc/parsoid.default.erb
@@ -5,3 +5,11 @@
 
 # File where the parsoid daemon will write stdin and stdout to
 PARSOID_LOG_FILE=<%= parsoid_log_file %>
+
+# Checkout of mediawiki/services/parsoid/deploy
+<% if has_variable?("parsoide_node_path") then %>
+NODE_PATH=<%= parsoid_node_path %>
+<% else %>
+# Override in puppet using parsoid_node_path
+#NODE_PATH=
+<% end %>
