beta: finish parsoid switching to jenkins job
Previous 03239e8 made use of the 'deploy' repository, this change now
switch Parsoid to use the mediawiki/services/parsoid repository. The
checkout is specified using PARSOID_BASE_PATH in the default file.

Change-Id: Ife841de4fc0a705a3fc134b0e0862f0ed8e2d681

--- a/templates/misc/parsoid.default.erb
+++ b/templates/misc/parsoid.default.erb
@@ -6,6 +6,14 @@
 # File where the parsoid daemon will write stdin and stdout to
 PARSOID_LOG_FILE=<%= @parsoid_log_file %>
 
+# Checkout of mediawiki/services/parsoid
+<% if @parsoid_base_path then %>
+PARSOID_BASE_PATH=<%= @parsoid_base_path %>
+<% else %>
+# Override in puppet using parsoid_base_path
+#PARSOID_BASE_PATH
+<% end %>
+
 # Checkout of mediawiki/services/parsoid/deploy
 <% if @parsoid_node_path then %>
 NODE_PATH=<%= @parsoid_node_path %>
